[workspace]
members = [
  "crates/node",
  "crates/runtime",
  "crates/pallets/starknet",
  "crates/primitives/api",
  "crates/primitives/starknet",
  "crates/primitives/digest-log",
  "crates/primitives/runtime",
  "crates/primitives/blockchain",
  "crates/primitives/version",
  "crates/client/block-proposer",
  "crates/client/api",
  "crates/client/db",
  "crates/client/rpc-core",
  "crates/client/rpc",
  "crates/client/mapping-sync",
  "crates/client/storage",
  "crates/client/transaction-pool",
  "crates/frame/support",
  "crates/frame/system",
]
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
edition = "2021"
repository = "https://github.com/keep-starknet-strange/madara/"

[workspace.dependencies]
# Substrate frame dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# Substrate primitives dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-aura = { git = "http://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-trie = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-application-crypto = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-weights = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-externalities = { version = "0.13.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-keystore = { version = "0.13.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-statement-store = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-core-hashing-proc-macro = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-metadata-ir = { version = "0.1.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# Substrate client dependencies
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", features = [
  "rocksdb",
], default-features = false }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
# For integration tests in order to create blocks on demand
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-proposer-metrics = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
# FIXME: remove completely this dependency and use mc-transaction-pool everywhere
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# Substrate build & tools dependencies
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-test-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
# Substrate Frame pallet
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

# Madara pallets
pallet-starknet = { path = "crates/pallets/starknet", default-features = false }

# Madara primtitives
mp-starknet = { path = "crates/primitives/starknet", default-features = false }
mp-digest-log = { path = "crates/primitives/digest-log", default-features = false }
mp-runtime = { path = "crates/primitives/runtime", default-features = false }
mp-blockchain = { path = "crates/primitives/blockchain", default-features = false }
mp-api = { path = "crates/primitives/api", default-features = false }
mp-block-builder = { path = "crates/primitives/block-builder", default-features = false }
mp-consensus = { path = "crates/primitives/consensus/common", default-features = false }
mp-transaction-pool = { path = "crates/primitives/transaction-pool", default-features = false }
mp-version = { path = "crates/primitives/version", default-features = false }


# Madara client
mc-mapping-sync = { path = "crates/client/mapping-sync", default-features = false }
mc-db = { path = "crates/client/db", default-features = false }
mc-client-api = { path = "crates/client/api", default-features = false }
mc-storage = { path = "crates/client/storage", default-features = false }
mc-rpc = { path = "crates/client/rpc", default-features = false }
mc-rpc-core = { path = "crates/client/rpc-core", default-features = false }
mc-block-proposer = { path = "crates/client/block-proposer", default-features = false }
mc-block-builder = { path = "crates/client/block-builder", default-features = false }
mc-transaction-pool = { path = "crates/client/transaction-pool", default-features = false }
mc-transaction-pool-api = { path = "crates/client/transaction-pool/api", default-features = false }

# Madara frame
frame-support = { path = "crates/frame/support", default-features = false }
frame-support-procedural = { path = "crates/frame/support/procedural", default-features = false }
frame-system = { path = "crates/frame/system", default-features = false }

# Madara runtime
madara-runtime = { path = "crates/runtime", default-features = false }

# Starknet dependencies
# Cairo Virtual Machine
cairo-vm = { git = "https://github.com/keep-starknet-strange/cairo-rs", branch = "no_std-support-with-cairo-1", default-features = false, features = [
  "cairo-1-hints",
  "parity-scale-codec",
] }
starknet-crypto = { version = "0.5.1", default-features = false }
starknet-core = { version = "0.3.0", default-features = false }
starknet-ff = { version = "0.3.4", default-features = false }

blockifier = { git = "https://github.com/keep-starknet-strange/blockifier", branch = "no_std-support", default-features = false, features = [
  "parity-scale-codec",
] }
starknet_api = { git = "https://github.com/keep-starknet-strange/starknet-api", branch = "no_std-support", features = [
  "testing",
  "parity-scale-codec",
], default-features = false }
# Other third party dependencies
anyhow = { version = "1.0.71", default-features = false }
flate2 = { version = "1.0.26", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
scale-info = { version = "2.8.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.19", default-features = false }
hex = { version = "0.4.3", default-features = false }
safe-mix = { version = "1.0", default-features = false }
jsonrpsee = { version = "0.16.2", default-features = false }
clap = { version = "4.3.8", default-features = false }
futures = { version = "0.3.28", default-features = false }
futures-timer = { version = "3.0.2", default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { version = "1.0.99", default-features = false }
serde_with = { version = "2.3.3", default-features = false }
bitvec = { version = "1", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
derive_more = { version = "0.99.17", default-features = false }
rstest = { version = "0.17.0", default-features = false }
pretty_assertions = { version = "1.3.0", default-features = false }
linked-hash-map = { version = "0.5.6", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
async-trait = { version = "0.1.68", default-features = false }
indexmap = { git = "https://github.com/bluss/indexmap", rev = "ca5f848e10c31e80aeaad0720d14aa2f6dd6cfb1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
lru = { version = "0.8.1", default-features = false }
fnv = { version = "1.0.6", default-features = false }
proc-macro2 = { version = "1.0.56", default-features = false }
quote = { version = "1.0.26", features = [
  "proc-macro",
], default-features = false }
syn = { version = "2.0.16", features = [
  "full",
  "proc-macro",
  "full",
  "extra-traits",
  "parsing",
], default-features = false }
proc-macro-crate = { version = "1.1.3", default-features = false }
proc-macro-warning = { version = "0.3.0", default-features = false }
derive-syn-parse = { version = "0.1.5", default-features = false }
Inflector = { version = "0.11.4", default-features = false }
cfg-expr = { version = "0.15.1", default-features = false }
itertools = { version = "0.10.3", default-features = false }
bitflags = { version = "1.3", default-features = false }
environmental = { version = "1.1.4", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
k256 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }
once_cell = { version = "1", default-features = false }
paste = { version = "1.0", default-features = false }
smallvec = { version = "1.8.0", default-features = false }
tt-call = { version = "1.0.8", default-features = false }
hash-db = { version = "0.16.0" }
cfg-if = { version = "1.0", default-features = false }
criterion = { version = "0.4.0", default-features = false }
assert_matches = { version = "1.3.0", default-features = false }
