[package]
name = "madara"
version = "0.1.0-alpha"
description = "Madara node."
authors = [
  "Abdelhamid Bakhta <@keep-starknet-strange>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "madara"

[dependencies]
async-trait = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"], default-features = false }
futures = { workspace = true, features = [
  "thread-pool",
], default-features = false }
log = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }

frame-system = { workspace = true, default-features = false }
mc-client-api = { workspace = true, default-features = false }
mc-transaction-pool-api = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }
sc-cli = { workspace = true, default-features = false }
sc-consensus = { workspace = true, default-features = false }
sc-consensus-aura = { workspace = true, default-features = false }
sc-consensus-grandpa = { workspace = true, default-features = false }
sc-consensus-manual-seal = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sc-keystore = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-network-sync = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-telemetry = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
sp-trie = { workspace = true, features = ["default"], default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true, features = [
  "server",
], default-features = false }

# Substrate primitives dependencies
mp-api = { workspace = true, default-features = false }
mp-block-builder = { workspace = true, default-features = false }
# Substrate client dependencies
prometheus-endpoint = { package = "substrate-prometheus-endpoint", workspace = true, default-features = false }
sc-rpc-api = { workspace = true, default-features = false }
# Substrate frame dependencies
# no substrate frame pallet dependencies for now

# Substrate tools dependencies
substrate-frame-rpc-system = { workspace = true, default-features = false }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true, default-features = false }
frame-benchmarking-cli = { workspace = true, default-features = false }

# Starknet
blockifier = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
madara-runtime = { workspace = true, default-features = false }
mc-block-proposer = { workspace = true, default-features = false }
mc-db = { workspace = true, default-features = false }
mc-mapping-sync = { workspace = true, default-features = false }
mc-rpc = { workspace = true, default-features = false }
mc-storage = { workspace = true, default-features = false }
mc-transaction-pool = { workspace = true, default-features = false }
mp-blockchain = { workspace = true, default-features = false }
mp-starknet = { workspace = true, default-features = false }
pallet-starknet = { workspace = true, default-features = false }
starknet-core = { workspace = true, default-features = false }

# CLI-specific dependencies
try-runtime-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

serde_json = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
  "madara-runtime/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["madara-runtime/try-runtime", "try-runtime-cli/try-runtime"]
