[package]
name = "mc-client-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate client interfaces."
documentation = "https://docs.rs/mc-client-api"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-blockchain = { workspace = true }
mp-runtime = { workspace = true }
mp-consensus = { workspace = true }

# Substrate client
sc-executor = { workspace = true }
mc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }

# Substrate primitives
mp-api = { workspace = true }
sp-core = { workspace = true }
sp-database = { workspace = true }
sp-externalities = { workspace = true }
sp-keystore = { workspace = true }
sp-state-machine = { workspace = true }
sp-statement-store = { workspace = true }
sp-storage = { workspace = true }

# Third party dependencies
fnv = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
prometheus-endpoint = { workspace = true }
codec = { workspace = true, default-features = false, features = [
  "derive",
] }

[dev-dependencies]
thiserror = { workspace = true }
sp-test-primitives = { workspace = true }
substrate-test-runtime = { workspace = true }
