[package]
name = "mc-client-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate client interfaces."
documentation = "https://docs.rs/mc-client-api"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-blockchain = { workspace = true, default-features = false }
mp-consensus = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }

# Substrate client
mc-transaction-pool-api = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sc-utils = { workspace = true, default-features = false }

# Substrate primitives
mp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-database = { workspace = true, default-features = false }
sp-externalities = { workspace = true, default-features = false }
sp-keystore = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
sp-statement-store = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }

# Third party dependencies
codec = { workspace = true, default-features = false, features = ["derive"] }
fnv = { workspace = true, default-features = false }
futures = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
parking_lot = { workspace = true, default-features = false }
prometheus-endpoint = { workspace = true, default-features = false }

[dev-dependencies]
thiserror = { workspace = true, default-features = false }
sp-test-primitives = { workspace = true, default-features = false }
substrate-test-runtime = { workspace = true, default-features = false }
