[package]
name = "mc-block-builder"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-api = { workspace = true, default-features = false }
mp-block-builder = { workspace = true, default-features = false }

# Madara client
mc-client-api = { workspace = true, default-features = false }

# Substrate primitives
mp-blockchain = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }

# Third party dependencies
codec = { package = "parity-scale-codec", version = "3.2.2", features = [
  "derive",
], default-features = false }

[dev-dependencies]
sp-state-machine = { workspace = true, default-features = false }
substrate-test-runtime-client = { workspace = true, default-features = false }
