[package]
name = "mc-block-proposer"
version = "0.1.0"
description = "Starknet block proposer implementation."
authors = [
  "Abdelhamid Bakhta <https://github.com/abdelhamidbakhta>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Madara primitives
mp-blockchain = { workspace = true, default-features = false }
mp-consensus = { workspace = true, default-features = false }
mp-runtime = { workspace = true, default-features = false }

# Substrate client
mc-block-builder = { workspace = true, default-features = false }
mc-client-api = { workspace = true, default-features = false }
mc-transaction-pool-api = { workspace = true, default-features = false }
mp-api = { workspace = true, default-features = false }
sc-proposer-metrics = { workspace = true, default-features = false }
sc-telemetry = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
futures = { workspace = true, default-features = false }
futures-timer = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
prometheus-endpoint = { workspace = true, default-features = false }
