[package]
name = "mc-mapping-sync"
version = "0.1.0"
description = "Mapping sync logic for Madara"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[dependencies]

# Madara client
mc-db = { workspace = true }
mc-rpc-core = { workspace = true }
mc-storage = { workspace = true }
mp-blockchain = { workspace = true }
mp-runtime = { workspace = true }

# Madara primitives
mp-digest-log = { workspace = true }
mp-starknet = { workspace = true }

# Madara pallets
pallet-starknet = { workspace = true }

# Substrate client
mc-client-api = { workspace = true }

# Substrate primitives
mp-api = { workspace = true }
sp-core = { workspace = true }

# Third party dependencies
futures = { workspace = true, default-features = true }
futures-timer = "3.0.2"
log = { workspace = true, default-features = true }
