[package]
name = "mc-mapping-sync"
version = "0.1.0"
description = "Mapping sync logic for Madara"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[dependencies]

# Madara client
mc-db = { workspace = true, default-features = true }
mc-rpc-core = { workspace = true, default-features = true }
mc-storage = { workspace = true, default-features = true }
mp-blockchain = { workspace = true, default-features = true }
mp-runtime = { workspace = true, default-features = true }

# Madara primitives
mp-digest-log = { workspace = true, default-features = true }
mp-starknet = { workspace = true, default-features = true }

# Madara pallets
pallet-starknet = { workspace = true, default-features = true }

# Substrate client
mc-client-api = { workspace = true, default-features = true }

# Substrate primitives
mp-api = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }

# Third party dependencies
futures = { workspace = true, default-features = true }
futures-timer = { workspace = "3.0.2", default-features = true }
log = { workspace = true, default-features = true }
