[package]
name = "mc-rpc-core"
version = "0.1.0"
description = "RPC trait of Starknet"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Madara primitives
mp-blockchain = { workspace = true, default-features = true }
mp-digest-log = { workspace = true }
mp-runtime = { workspace = true, default-features = true }
mp-starknet = { workspace = true, default-features = true }
frame-support = { workspace = true }

# Subtrate primitives
mp-api = { workspace = true, default-features = true }
sp-core = { workspace = true }

# Starknet dependencies
blockifier = { workspace = true, default-features = false }
cairo-vm = { workspace = true, default-features = false }
starknet-core = { workspace = true }
starknet_api = { workspace = true, default-features = false }

# Third party dependencies
anyhow = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = [
  "server",
  "macros",
], default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
