[package]
name = "mc-rpc"
version = "0.1.0"
description = "Starknet RPC compatibility layer for Substrate"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Madara runtime
madara-runtime = { workspace = true, default-features = true }
pallet-starknet = { workspace = true, default-features = true }
# Madara client
mc-db = { workspace = true, default-features = true }
mc-rpc-core = { workspace = true, default-features = true }
mc-storage = { workspace = true, default-features = true }
mc-transaction-pool = { workspace = true, default-features = true }

# Madara primitives
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
mp-api = { workspace = true, default-features = true }
mp-blockchain = { workspace = true, default-features = true }
mp-runtime = { workspace = true, default-features = true }
mp-starknet = { workspace = true, default-features = true }


# Substate primitives
sp-arithmetic = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
# Substrate client
mc-client-api = { workspace = true, default-features = true }
sc-network-sync = { workspace = true, default-features = true }
# Starknet
blockifier = { workspace = true, default-features = false, features = [
  "testing",
] }
starknet-core = { workspace = true, default-features = true }
starknet-ff = { workspace = true, default-features = true }
starknet_api = { workspace = true, default-features = false }
# Others
hex = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, default-features = true, features = [
  "server",
  "macros",
] }
log = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
rstest = { workspace = true, default-features = true }
pretty_assertions = { workspace = true, default-features = true }
